Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,19 +1,57 @@
+<!doctype html>
 <html>
-<head>
-  <title>Õndice de ejemplos para curso de JavaScript</title>
-</head>
-<body>
-  <h1>Õndice de ejemplos para curso de JavaScript</h1>
-  <h2>Por VÌ≠ctor Rivas</h2>
-  <h3>Depurador de cÛdigo</h3>
-  <ul>
-    <li><a href="depurador/depurador-1.html">Depurador-1: palabra mal escrita.</a></li>
-    <li><a href="depurador/depurador-2.html">Depurador-2: falta cerrar unas comillas.</a></li>
-    <li><a href="depurador/depurador-3.html">Depurador-3: las variables no toman el valor que esperamos.</a></li>
-    <li><a href="depurador/depurador-4.html">Depurador-4: error en uno de los bloques de JavaScript.</a></li>
-    <li><a href="depurador/depurador-5.html">Depurador-5: alg˙n elemento no se descarga desde la red.</a></li>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Dl-javascript by vrivas</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </ul>
+  </head>
+  <body>
 
-</body>
+      <header>
+        <h1>Dl-javascript</h1>
+        <p>Ejemplos para las clases y v√≠deos de Digital Learning del curso de JavaScript</p>
+      </header>
+
+      <div id="banner">
+        <span id="logo"></span>
+
+        <a href="https://github.com/vrivas/dl-javascript" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/vrivas/dl-javascript/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/vrivas/dl-javascript/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <h3>
+<a id="ejemplos-para-los-v√≠deos-de-digital-learning" class="anchor" href="#ejemplos-para-los-v%C3%ADdeos-de-digital-learning" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ejemplos para los v√≠deos de Digital Learning</h3>
+
+<p>Desde aqu√≠ puedes descargar todo el c√≥digo que usamos en los v√≠deos del curso de JavaScript de Digital Learning.</p>
+
+<p>Si no tienes cuenta en GitHub simplemente pulsa en los botones ZIP o TAR para descarg√°rtelo.</p>
+      </section>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/vrivas">vrivas</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+      </footer>
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
