Añado el enlace al sitio de descarga del código

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
   <h1>Índice de ejemplos para curso de JavaScript</h1>
   <h2>Por Ví­ctor Rivas</h2>
+  <h3>Puedes descargar todo el código desde: <a href="https://vrivas.github.io/dl-javascript/" target="_blank">https://vrivas.github.io/dl-javascript/</a></h3>
   <h3>Depurador de código</h3>
   <ul>
     <li><a href="depurador/depurador-1.html">Depurador-1: palabra mal escrita.</a></li>
