--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html>
 <head>
-  <title>Índice de ejemplos para curso de JavaScript</title>
+  <title>ï¿½ndice de ejemplos para curso de JavaScript</title>
 </head>
 <body>
-  <h1>Índice de ejemplos para curso de JavaScript</h1>
-  <h2>Por Ví­ctor Rivas</h2>
-  <h3>Puedes descargar todo el código desde: <a href="https://vrivas.github.io/dl-javascript/" target="_blank">https://vrivas.github.io/dl-javascript/</a></h3>
-  <h3>Depurador de código</h3>
+  <h1>ï¿½ndice de ejemplos para curso de JavaScript</h1>
+  <h2>Por Vï¿½ï¿½ctor Rivas</h2>
+  <h3>Puedes descargar todo el cï¿½digo desde: <a href="https://vrivas.github.io/dl-javascript/" target="_blank">https://vrivas.github.io/dl-javascript/</a></h3>
+  <h3>Depurador de cï¿½digo</h3>
   <ul>
     <li><a href="depurador/depurador-1.html">Depurador-1: palabra mal escrita.</a></li>
     <li><a href="depurador/depurador-2.html">Depurador-2: falta cerrar unas comillas.</a></li>
     <li><a href="depurador/depurador-3.html">Depurador-3: las variables no toman el valor que esperamos.</a></li>
     <li><a href="depurador/depurador-4.html">Depurador-4: error en uno de los bloques de JavaScript.</a></li>
-    <li><a href="depurador/depurador-5.html">Depurador-5: algún elemento no se descarga desde la red.</a></li>
-
+    <li><a href="depurador/depurador-5.html">Depurador-5: algï¿½n elemento no se descarga desde la red.</a></li>
+  </ul>
+  <h3>Pre-incrementos y post-incrementos</h3>
+  <ul>
+    <li><a href="incrementos/incrementos-1.html">Incrementos-1: muestra 1, 2 y 3 en pantalla.</a></li>
   </ul>
 
 </body>
