Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Dl-javascript by vrivas</title>
+    <title>DL-JavaScript by vrivas</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Dl-javascript</h1>
+        <h1>DL-JavaScript</h1>
         <p>Ejemplos para las clases y vídeos de Digital Learning del curso de JavaScript</p>
       </header>
 
