Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,9 +42,18 @@
         <h3>
 <a id="ejemplos-para-los-vídeos-de-digital-learning" class="anchor" href="#ejemplos-para-los-v%C3%ADdeos-de-digital-learning" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ejemplos para los vídeos de Digital Learning</h3>
 
-<p>Desde aquí puedes descargar todo el código que usamos en los vídeos del curso de JavaScript de Digital Learning.</p>
+<p>Desde aquí puedes descargar todo el código que usamos en los vídeos del curso de JavaScript de Digital Learning.
+Si no tienes cuenta en GitHub simplemente pulsa en los botones ZIP o TAR para descargártelo.</p>
 
-<p>Si no tienes cuenta en GitHub simplemente pulsa en los botones ZIP o TAR para descargártelo.</p>
+<h2>
+<a id="autor" class="anchor" href="#autor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Autor</h2>
+
+<p>El código que vas a ver está hecho en su mayor parte (si no al 100%) por <a href="http://vrivas.es">Víctor M. Rivas Santos</a>.</p>
+
+<h2>
+<a id="el-curso" class="anchor" href="#el-curso" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>El curso</h2>
+
+<p>Puedes acceder a este curso de la empresa Digital Learning en la dirección: <a href="http://www.digitallearning.es/formacion.html">http://www.digitallearning.es/formacion.html</a>, concretamente en el curso titulado "<a href="http://www.digitallearning.es/curso-programacion-web-javascript.html">Curso Programación Web con JavaScript y jQuery</a>"</p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/vrivas">vrivas</a></p>
