Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a id="ejemplos-para-los-vídeos-de-digital-learning" class="anchor" href="#ejemplos-para-los-v%C3%ADdeos-de-digital-learning" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ejemplos para los vídeos de Digital Learning</h3>
+        <h1>
+<a id="dl-javascript" class="anchor" href="#dl-javascript" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>DL-JavaScript</h1>
 
-<p>Desde aquí puedes descargar todo el código que usamos en los vídeos del curso de JavaScript de Digital Learning.
+<p>Desde aquí puedes descargar todo el código que usamos en los ejemplos de los vídeos del curso de JavaScript de <a href="http://www.digitallearning.es">Digital Learning</a>.
 Si no tienes cuenta en GitHub simplemente pulsa en los botones ZIP o TAR para descargártelo.</p>
 
 <h2>
@@ -53,7 +53,7 @@ Si no tienes cuenta en GitHub simplemente pulsa en los botones ZIP o TAR para de
 <h2>
 <a id="el-curso" class="anchor" href="#el-curso" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>El curso</h2>
 
-<p>Puedes acceder a este curso de la empresa Digital Learning en la dirección: <a href="http://www.digitallearning.es/formacion.html">http://www.digitallearning.es/formacion.html</a>, concretamente en el curso titulado "<a href="http://www.digitallearning.es/curso-programacion-web-javascript.html">Curso Programación Web con JavaScript y jQuery</a>"</p>
+<p>Puedes acceder a este curso de la empresa <a href="http://www.digitallearning.es">Digital Learning</a> en la dirección: <a href="http://www.digitallearning.es/formacion.html">http://www.digitallearning.es/formacion.html</a>, concretamente en el curso titulado "<a href="http://www.digitallearning.es/curso-programacion-web-javascript.html">Curso Programación Web con JavaScript y jQuery</a>"</p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/vrivas">vrivas</a></p>
