Añado el ejemplo de vectores y objetos para el tema 2

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <li><a href="incrementos/incrementos-1.html">Incrementos-1: muestra 1, 2 y 3 en pantalla.</a></li>
     <li><a href="incrementos/incrementos-2.html">Incrementos-2: bloques <code>div</code> de distinto tamaño en pantalla.</a></li>
   </ul>
+  <h3>Vectores y objetos</h3>
+  <ul>
+    <li><a href="vectores-objetos/vectores-objetos-1.html">Vectores-Objetos-1: Solo vectores.</a></li>
+    <li><a href="vectores-objetos/vectores-objetos-2.html">Vectores-Objetos-2: Solo objetos.</a></li>
+    <li><a href="vectores-objetos/vectores-objetos-3.html">Vectores-Objetos-3: Vector de objetos.</a></li>
+    <li><a href="vectores-objetos/vectores-objetos-4.html">Vectores-Objetos-4: Vector de objetos que contienen vectores.</a></li>
+  </ul>
 
 </body>
 </html>
