Añado ejemplos de Eventos

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     <li><a href="vectores-objetos/vectores-objetos-3.html">Vectores-Objetos-3: Vector de objetos.</a></li>
     <li><a href="vectores-objetos/vectores-objetos-4.html">Vectores-Objetos-4: Vector de objetos que contienen vectores.</a></li>
   </ul>
+  <h3>Eventos</h3>
+  <p>Guía de referencia de eventos en JavaScript: <a href="http://www.w3schools.com/jsref/dom_obj_event.asp" target="_blank">http://www.w3schools.com/jsref/dom_obj_event.asp</a>
+  <ul>
+    <li><a href="eventos/eventos-1.html">eventos-1: El ejemplo más simple.</a></li>
+    <li><a href="eventos/eventos-2.html">eventos-2: Reutilización de funciones.</a></li>
+    <li><a href="eventos/eventos-3.html">eventos-3: Cambiando el tamaño de la imagen.</a></li>
+    <li><a href="eventos/eventos-4.html">eventos-4: Asignando manejadores al final.</a></li>
+    <li><a href="eventos/eventos-5.html">eventos-5: Eventos automáticos.</a></li>
+    <li><a href="eventos/eventos-6.html">eventos-6: Múltiples acciones SIN addEventListener.</a></li>
+    <li><a href="eventos/eventos-6.html">eventos-7: Múltiples acciones CON addEventListener.</a></li>
+
+  </ul>
 
 </body>
 </html>
