Usando mayúsculas en Eventos como en el resto de list-items

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <h3>Eventos</h3>
   <p>Guía de referencia de eventos en JavaScript: <a href="http://www.w3schools.com/jsref/dom_obj_event.asp" target="_blank">http://www.w3schools.com/jsref/dom_obj_event.asp</a>
   <ul>
-    <li><a href="eventos/eventos-1.html">eventos-1: El ejemplo más simple.</a></li>
-    <li><a href="eventos/eventos-2.html">eventos-2: Reutilización de funciones.</a></li>
-    <li><a href="eventos/eventos-3.html">eventos-3: Cambiando el tamaño de la imagen.</a></li>
-    <li><a href="eventos/eventos-4.html">eventos-4: Asignando manejadores al final.</a></li>
-    <li><a href="eventos/eventos-5.html">eventos-5: Eventos automáticos.</a></li>
-    <li><a href="eventos/eventos-6.html">eventos-6: Múltiples acciones SIN addEventListener.</a></li>
-    <li><a href="eventos/eventos-6.html">eventos-7: Múltiples acciones CON addEventListener.</a></li>
+    <li><a href="eventos/eventos-1.html">Eventos-1: El ejemplo más simple.</a></li>
+    <li><a href="eventos/eventos-2.html">Eventos-2: Reutilización de funciones.</a></li>
+    <li><a href="eventos/eventos-3.html">Eventos-3: Cambiando el tamaño de la imagen.</a></li>
+    <li><a href="eventos/eventos-4.html">Eventos-4: Asignando manejadores al final.</a></li>
+    <li><a href="eventos/eventos-5.html">Eventos-5: Eventos automáticos.</a></li>
+    <li><a href="eventos/eventos-6.html">Eventos-6: Múltiples acciones SIN addEventListener.</a></li>
+    <li><a href="eventos/eventos-6.html">Eventos-7: Múltiples acciones CON addEventListener.</a></li>
 
   </ul>
 
