--- a/eventos/eventos-1.html
+++ b/eventos/eventos-1.html
@@ -12,6 +12,6 @@
 <body>
 <h1>Eventos: ejemplo 1 - El ejemplo más simple</h1>
 <img src="1.jpg" width="200" onmouseover="this.src='2.jpg'">
-<img src="1.jpg" width="200" onclick="cambiaImagen(this)">
+<img src="1.jpg" width="200" onclick="cambiaImagen(this)"> // callback
 </body>
 </html>
