--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
     <li><a href="eventos/eventos-5.html">Eventos-5: Eventos automáticos.</a></li>
     <li><a href="eventos/eventos-6.html">Eventos-6: Múltiples acciones SIN addEventListener.</a></li>
     <li><a href="eventos/eventos-7.html">Eventos-7: Múltiples acciones CON addEventListener.</a></li>
-
   </ul>
-
+  <h3>Manipulando el DOM</h3>
+  <ul>
+    <li><a href="dom/dom-1.html">DOM-1: Accediendo a un elemento con <em>getElementById</em></a></li>
+    <li><a href="dom/dom-2.html">DOM-2: Accediendo a muchos elementos con <em>getElementsByTagName</em></a></li>
+    <li><a href="dom/dom-3.html">DOM-3: Cambiando la propiedad <em>innerHTML</em></a></li>
+    <li><a href="dom/dom-4.html">DOM-4: Cambiando la propiedad <em>class</em></a></li>
+  </ul>
 </body>
 </html>
